--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "*.tcc": "c",
         "limits": "c",
         "numeric": "c",
-        "streambuf": "c"
+        "streambuf": "c",
+        "string.h": "c"
     }
 }
